--- a/app/sass/_content.sass
+++ b/app/sass/_content.sass
@@ -1,11 +1,11 @@
 .content
-  height: 1500px
+  //height: 1500px
   .page-description
     height: 100px
     background-color: lightpink
     padding: 10px
 
-  .always-visible-block.card
+  .always-visible-block.card, .always-visible-block-clone
     position: inherit
     width: 200px
     height: 500px
@@ -13,6 +13,9 @@
     float: right
     background-color: purple
     color: white
+
+  .always-visible-block-clone
+    background-color: whitesmoke
 
   .sticky
     position: fixed!important
